src/test/deca/context/valid/return/return_float_simple.deca
// Description :
//    Méthode retournant une valeur flottante simple.
//
// Resultats :
//    OK

class A {
    float f() {
        return 1.5;
    }
}

{
    A a = new A();
    println(a.f());
}

